# fishing_forecast

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PENDINGS.md  PLAN.md  README.md  bitacora.md  pyproject.toml
configs/: cicese_stations.yaml  copernicus_vars.yaml  economic_units.yaml  etl.yaml  globcolour_vars.yaml  season_calendars.yaml  species_mapping.yaml
docs/: SETUP_AND_RUNBOOK.md  etl_design.md  repo_audit.md
docs/decisions/: ADR-0001-y-missing.md
etl/: cicese.py  copernicus.py  globcolour.py  requirements.txt  run_etl.bat  run_etl.sh
etl/extract/: cicese_extract.py  copernicus_extract.py  globcolour_extract.py  google_earth_extract.py
etl/load/: cicese_load.py  copernicus_load.py  globcolour_load.py
etl/transform/: cicese_transform.py  dataset_merger.py  globcolour_transform.py
experiments/exp1_baseline_retrain/: baseline.py
forecasting_models/: README.md  data_processing.ipynb  requirements.txt
forecasting_models/baseline/: baseline.ipynb  requirements.txt
forecasting_models/modeling/: code_wandb.py
forecasting_models/models/: README.md  arima.py  lgbm_xgboost.py  lstm.py  model.py  prophet.py
forecasting_models/models/nixtla/: time_gpt.py
src/fishing_forecast/: __init__.py  cli.py  config.py
src/fishing_forecast/etl/: __init__.py  consolidate.py  quality_checks.py
src/fishing_forecast/etl/aggregate/: __init__.py  mhw.py  ocean_by_ue.py
src/fishing_forecast/etl/extract/: __init__.py  arribos_conapesca.py  cicese.py  s3_legacy.py  sst_oisst.py
src/fishing_forecast/etl/transform/: __init__.py  arribos.py  cicese.py
src/fishing_forecast/evaluation/: __init__.py  metrics.py
src/fishing_forecast/features/: __init__.py
src/fishing_forecast/utils/: __init__.py  dates.py  download.py
src/fishing_forecast/viz/: __init__.py  mhw_plot.py
tests/: conftest.py  test_smoke.py
tests/etl/: test_cicese.py  test_consolidate.py  test_extract_arribos_conapesca.py  test_extract_sst_oisst.py  test_mhw.py  test_ocean_by_ue.py  test_quality_checks.py  test_s3_legacy.py  test_transform_arribos.py
tests/evaluation/: test_metrics.py
tests/fixtures/: cicese_index_sample.html  cobi_arribos_sample.csv  conapesca_arribos_sample.csv  conapesca_index_sample.html
tests/viz/: test_mhw_plot.py
